--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,23 @@
 @import "tailwindcss";
+
+/* Google Font Imports */
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
+
+@theme {
+  --font-sans: "Inter", sans-serif;
+  --inset-shadow-sm: inset 0 0 4px rgba(255, 255, 255, 0.25); 
+  --leading-base: -0.03em;
+}
+
+@utility shadow-base {
+  box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.8), inset 0px 0px 2px rgba(255, 255, 255, 0.1);
+}
+
+
+
+body{
+  background-color: black;
+  color: white;
+  letter-spacing: var(--leading-base);
+}
