--- a/src/index.css
+++ b/src/index.css
@@ -14,10 +14,15 @@
   box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.8), inset 0px 0px 2px rgba(255, 255, 255, 0.1);
 }
 
-
-
 body{
   background-color: black;
   color: white;
   letter-spacing: var(--leading-base);
+}
+
+.active-link{
+  @apply flex items-center gap-2 px-4 py-3 bg-linear-to-b from-[#181818] to-[#080808] rounded-lg shadow-base
+}
+.inactive-link{
+  @apply flex items-center gap-2 px-4 py-3 rounded-lg  opacity-60
 }
