--- a/src/index.css
+++ b/src/index.css
@@ -1,28 +1,33 @@
-@import "tailwindcss";
-
 /* Google Font Imports */
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
+@import "tailwindcss";
 
 @theme {
   --font-sans: "Inter", sans-serif;
   --inset-shadow-sm: inset 0 0 4px rgba(255, 255, 255, 0.25); 
   --leading-base: -0.03em;
 }
-
 @utility shadow-base {
   box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.8), inset 0px 0px 2px rgba(255, 255, 255, 0.1);
 }
-
-body{
-  background-color: black;
-  color: white;
-  letter-spacing: var(--leading-base);
+.btn-primary{
+  @apply font-bold text-black px-8 py-3 rounded-lg bg-linear-to-b from-[#C4C4C4] to-[#ffffff] hover:cursor-pointer hover:text-2xl transition-all duration-300
 }
-
 .active-link{
   @apply flex items-center gap-2 px-4 py-3 bg-linear-to-b from-[#181818] to-[#080808] rounded-lg shadow-base
 }
 .inactive-link{
   @apply flex items-center gap-2 px-4 py-3 rounded-lg  opacity-60
+}
+
+body{
+  background-color: black;
+  color: white;
+  font-size: 1.25rem;
+  letter-spacing: var(--leading-base);
+  user-select: none;
+}
+img{
+  pointer-events: none;
 }
