--- a/src/index.css
+++ b/src/index.css
@@ -11,23 +11,72 @@
 @utility shadow-base {
   box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.8), inset 0px 0px 2px rgba(255, 255, 255, 0.1);
 }
-.btn-primary{
-  @apply font-bold text-black px-8 py-3 rounded-lg bg-linear-to-b from-[#C4C4C4] to-[#ffffff] hover:cursor-pointer hover:text-2xl transition-all duration-300
+.btn-primary {
+  @apply font-bold text-black px-8 py-3 rounded-lg bg-linear-to-b from-[#C4C4C4] to-[#ffffff] hover:cursor-pointer hover:opacity-80 hover:translate-y-0.5 transition-all duration-300
 }
-.active-link{
+.active-link {
   @apply flex items-center gap-2 px-4 py-3 bg-linear-to-b from-[#181818] to-[#080808] rounded-lg shadow-base
 }
-.inactive-link{
+.inactive-link {
   @apply flex items-center gap-2 px-4 py-3 rounded-lg  opacity-60
 }
 
-body{
+body {
   background-color: black;
   color: white;
   font-size: 1.25rem;
+  line-height: 1.4;
   letter-spacing: var(--leading-base);
   user-select: none;
 }
-img{
+img {
   pointer-events: none;
+}
+
+h2 {
+  font: var(--font-sans);
+  font-weight: 500;
+  font-size: clamp(1.5rem, 4vw, 2rem);
+  line-height: 1.1;
+}
+
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  padding-top: 16px;
+}
+.project-container {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  margin-bottom: 28px;
+}
+
+.project-img {
+  width: 100%;
+  height: 328px;
+  border-radius: 24px;
+  overflow: hidden;
+}
+.project-img img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+.project-details {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 8px;
+}
+.project-details .title-details{
+  font-size: 1.5rem;
+  font-weight: 500;
+}
+.project-details .year-details{
+  font-size: 1.25rem;
+  opacity: 60%;
 }
